@@ -24,6 +24,8 @@ mlr_2.3:
   now unnecessary object slots were removed
 - classif.lda and classif.qda now have hyperpar "predict.method"
 - filerFeatures and makeFilterWrapper gain an argument for mandatory features
+- plotLearnerPrediction has new option "err.size"
+
 
 - new functions
 -- getTaskType, getTaskId, getTaskTargetNames
